fixed a font-size issue and added instructions for uploading exams

--- a/static/style.css
+++ b/static/style.css
@@ -30,6 +30,10 @@ body p {
 	height: 10px;
 }
 
+#upload-exam select option {
+	font-size: 14px;
+}
+
 #upload-exam input[type="number"] {
 	width: 75px;
 }
